make tests more stable